# dac

./: README.md
agent-registry/: Dockerfile-amd64  Dockerfile-arm64  README.md  build.md  expert-registry.md  expert-registry.yaml  orchestrator-registry.md  orchestrator-registry.yaml  pyproject.toml  requirements.txt  test.py  test.sh
agent-registry/agent_registry/: redis_registry.py  server.py  vector_client.py
celery-httpserver/: Dockerfile-amd64  Dockerfile-arm64  README.md  build.md  k8s.yaml  pyproject.toml
celery-httpserver/celery_httpserver/: server.py
dac-apiserver/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
dac-apiserver/cmd/dactl/: main.go
dac-apiserver/cmd/server/: main.go
dac-apiserver/configs/: config.yaml
dac-apiserver/deploy/: configmap.yaml  deployment.yaml  rbac.yaml
dac-apiserver/docs/: docs.go  swagger.json  swagger.yaml
dac-apiserver/examples/: dataagentcontainer.yaml  datadescriptor-mysql.yaml
dac-apiserver/internal/config/: config.go
dac-apiserver/internal/domain/: chat.go  errors.go  resource.go  user.go
dac-apiserver/internal/ent/: client.go  ent.go  mutation.go  run.go  run_create.go  run_delete.go  run_query.go  run_update.go  runtime.go  tx.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
dac-apiserver/internal/handler/: agent_container_handler.go  chat_handler.go  data_descriptor_handler.go  health_handler.go  response.go  user_handler.go
dac-apiserver/internal/middleware/: cors.go  logger.go  recovery.go
dac-apiserver/internal/router/: router.go
dac-apiserver/internal/usecase/: agent_container_usecase.go  chat_usecase.go  data_descriptor_usecase.go  user_usecase.go  user_usecase_test.go
dac-apiserver/pkg/database/: database.go
dac-apiserver/pkg/k8s/: client.go
dac-apiserver/pkg/logger/: hertz_adapter.go  logger.go
dac-apiserver/test/integration/: chat_http_test.go
data-services/: API-FINGERPRINT.md  API-HISTORY.md  API-KNOWLEDGE.md  API-MEMORY.md  API-VECTOR.md  Dockerfile-amd64  Dockerfile-arm64  README.md  build.md  k8s.yaml  pyproject.toml  test-fingerprint.sh  test-history.sh  test-knowledge.sh  test-memory.sh  test-vector.sh
data-services/data_services/: server.py
data-services/data_services/api/: base.py
data-services/data_services/fingerprint/: fingerprint.py  fingerprint_test.py
data-services/data_services/history/: history.py  history_test.py
data-services/data_services/knowledge_pyramid/: knowledge_pyramid.py  knowledge_pyramid_test.py  prompts_test.py
data-services/data_services/memory/: async_memory_test_userid.py  memory.py  memory_test_agentid.py  memory_test_all.py  memory_test_runid.py  memory_test_userid.py  memory_test_userid_graph.py
data-services/data_services/vector/: vector.py  vector_test.py
data-services/sdks/: model_sdk-0.1.0-py3-none-any.whl
data-sinkers/: Dockerfile-amd64  Dockerfile-arm64  README.md  build.md  entrypoint-worker.sh  k8s-gpu.yaml  k8s.yaml  requirements.txt
data-sinkers/data_sinkers/: __init__.py  tasks.py
data-sinkers/data_sinkers/analyzers/: fingerprint.py  fingerprint_test.py
data-sinkers/data_sinkers/api/: base.py
data-sinkers/data_sinkers/client/: fingerprint_client.py  knowledge_pyramid_client.py  vector_client.py
data-sinkers/data_sinkers/extractors/: fileserver.py  minio.py  mysql.py  postgres.py
data-sinkers/data_sinkers/file_processors/: csv.py  csv_test.py  excel.py  excel_test.py  general.py  general_test.py  markdown.py  markdown_test.py  mineru.py  mineru_test.py  (+6 more)
data-sinkers/sdks/: vector_sdk-0.1.0-py3-none-any.whl
docs/: env-nvidia.md
execution-engine/: PROJECT  README.md  build.md  go.mod
execution-engine/cmd/: main.go
expert-agent/: Dockerfile-amd64  Dockerfile-arm64  README.md  build.md  k8s.yaml  pyproject.toml  test.py
expert-agent/agent/: dataservices_client.py  prompts.py  redis_registry.py  schema.py  server.py
model_sdk/: Dockerfile-amd64  Dockerfile-arm64  README.md  build.md  requirements.txt  setup.py  test.py
model_sdk/model_sdk/: __init__.py
model_sdk/tests/: k8s-bge-m3-vllm.yaml  k8s-bge-rerank-v2-m3.yaml  k8s-qwen25.yaml  k8s-qwen3-toolcall.yaml  k8s-test.yaml  test-azure-embedding.py  test-dashscope-embedding.py  test-infinity-embedding.py  test-openai-compatible-embedding.py  test-openai-compatible-llm.py  test-openai-compatible-rerank.py  test-openai-embedding.py  test-qwen3-8b-langchain-structuredoutput.py  test-qwen3-8b-toolcall.py
orchestrator-agent/: Dockerfile-amd64  Dockerfile-arm64  README.md  build.md  k8s.yaml  pyproject.toml  requirements.txt  test.py
orchestrator-agent/agent_card/: orchestrator_agent.json
orchestrator-agent/orchestrator_agent/: agentregistry_client.py  dataservices_client.py  redis_registry.py  server.py
routing-agent/: .dockerignore  Dockerfile-amd64  Dockerfile-arm64  Dockerfile-test  README.md  build.md  k8s.yaml  pyproject.toml  telemetry.py  test.py
routing-agent/agent_card/: routing_agent.json
routing-agent/routing_agent/: agentregistry_client.py  server.py
vector_sdk/: Dockerfile-amd64  Dockerfile-amd64-wheel  Dockerfile-arm64  README.md  build.md  requirements.txt  setup.py  test-async.py  test.py
vector_sdk/vector_sdk/: __init__.py  base.py  cached_embedding.py  configs.py  vector_base.py  vector_factory.py
(+104 files in other folders)
